--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "laravel/tinker": "^2.5",
         "laravolt/indonesia": "^0.30.0",
         "simplesoftwareio/simple-qrcode": "^4.2",
-        "twilio/sdk": "^6.42"
+        "twilio/sdk": "^6.42",
+        "intervention/image": "^2.4"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
