--- a/composer.json
+++ b/composer.json
@@ -10,13 +10,14 @@
         "dompdf/dompdf": "*",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
+        "intervention/image": "^2.4",
         "laravel/framework": "^8.65",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
         "laravolt/indonesia": "^0.30.0",
+        "phpoffice/phpword": "^1.1",
         "simplesoftwareio/simple-qrcode": "^4.2",
-        "twilio/sdk": "^6.42",
-        "intervention/image": "^2.4"
+        "twilio/sdk": "^6.42"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
